--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,23 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Web Interface</title>
+    <title>web interface</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <header class="container text-white">
+      <h4 class="py-2">Das Wundertier - Ihr Tierarzt</h4>
+    </header>
+
     <div id="root"></div>
+
+    <footer class="container d-flex text-white py-2">
+      <p>
+        &copy; 2021 WebInterface Tutorial
+      </p>
+     
+      <!-- col-md-6 -->
+    </footer>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
