--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <header class="container text-white">
-      <h4 class="py-2">Das Wundertier - Ihr Tierarzt</h4>
+      <h4 class="py-2">Add & Search Appointments!</h4>
     </header>
 
     <div id="root"></div>
